--- a/public/slider.html
+++ b/public/slider.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/slider.css">
+
+    <style>
+        .img-responsive {
+            max-width: 100%;
+            height: auto;
+        }
+    </style>
 </head>
 <body>
 
